# PUB_Sistemas_E_Sinais

./: .gitignore  .pre-commit-config.yaml  INDEX.md  INSTALL.md  LICENSE  Makefile  README.md  SETUP.md  pre-push  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Makefile  README.md  api.rst  conf.py  index.rst
notebooks/: predador_presa.ipynb  predador_presa.py
scripts/: run_tests.sh  set_notebook_kernel.sh  setup.cmd  setup.sh  setup_kernel.sh  sync_notebooks.cmd  sync_notebooks.sh
src/: __init__.py  lotka_volterra.py
tests/: conftest.py  test_predador_presa.py
