[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistemas-sinais"
version = "0.1.0"
description = "Simulações interativas de Sistemas e Sinais para estudantes da USP"
readme = "README.md"
authors = [{name = "Felipe Lopez", email = "felipe_lopez@usp.br"}]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["sistemas", "sinais", "jupyter", "educação", "usp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "jupytext>=1.14.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Repository = "https://github.com/feliplpz/PUB_Sistemas_E_Sinais"

[tool.jupytext]
formats = "py:percent,ipynb"
notebook_metadata_filter = "-all"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88
