[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistemas-sinais"
version = "0.1.0"
description = "Simulações interativas de Sistemas e Sinais para estudantes da USP"
readme = "README.md"
authors = [{name = "Felipe Lopez", email = "felipe_lopez@usp.br"}]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "jupytext>=1.14.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "numpydoc>=1.6.0",
]

[project.urls]
Repository = "https://github.com/feliplpz/PUB_Sistemas_E_Sinais"

[tool.setuptools]
py-modules = ["lotka_volterra"]  # Para arquivo .py único
package-dir = {"" = "src"}

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["lotka_volterra"]
skip_gitignore = true

# Ruff configuration (linting)
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "notebooks",  # NÃO lint notebooks
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# pydocstyle configuration
[tool.pydocstyle]
convention = "numpy"
match = "^(?!test_).*\\.py"
match_dir = "^(?!tests).*"

# Jupytext configuration
[tool.jupytext]
formats = "py:percent,ipynb"
notebook_metadata_filter = "-all"
